...
    <string name="test_password_character_special_and_digit_number">Password have at least one special character or character number</string>
    <string name="test_password_have_space">Password have character space</string>
    <string name="test_password_capital_letter">Password not enough three capital letters</string>
    <string name="test_password_same_character">Password have character overlap more than two times</string>
    <string name="test_done">Done</string>
    <string name="text_kilometer">KM</string>
    <string name="success_login">Congratulations on your successful login !!!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="status_screen_1">Welcome</string>
    <string name="status_screen_2">Be unique</string>
    <string name="status_screen_3">Get started</string>
    <string name="slogan_screen_1">Express yourself through \n the art of the fashionism.</string>
    <string name="slogan_screen_2">Your profile is \n your \n online art gallery.</string>
...
